# Vitis_Libraries

./: .buildinfo  .clang-format  .gitignore  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  LICENSE.txt  README.md  README.rst  dependencies.html  dependency.json  genindex.html  index.html  index_2019_2.html  index_2020_1.html  index_2020_2.html  index_2021_1.html  index_2021_2.html  library.json  objects.inv  params.json  platform_map.json  reformat.py  release_notes.html  release_notes_2020_2.html  release_notes_2021_1.html  release_notes_2021_2.html  search.html  searchindex.js  versions.html
.doctrees/: environment.pickle  index.doctree  versions.doctree
2019.2/: .buildinfo  api-reference.html  genindex.html  getting-started-with-vitis-vision.html  index.html  migrating-hls-video-library-to-vitis-vision.html  models_and_methods.html  objects.inv  overview.html  search.html  searchindex.js  usecase.html  using-the-vitis-vision-library.html
2020.1/: genindex.html  index.html  objects.inv  overview.html  rel.html  release.html  search.html  searchindex.js  usecase.html
2020.2/: design-examples.html  design_flows.html  genindex.html  getting-started-with-vitis-vision.html  index.html  objects.inv  overview.html  pyenvguide.html  release.html  requirements.html  search.html  searchindex.js  using-the-vitis-vision-library.html
2021.1/: Benchmark.html  ISPpipeline-bm.html  api-reference-aie.html  api-reference.html  benchmark.html  bilateralfilter-bm.html  canny-bm.html  denseLKpyrOF-bm.html  design_flows.html  fast-bm.html  gaussiandifference-bm.html  genindex.html  harris-bm.html  houghlines-bm.html  index.html  migrating-hls-video-library-to-vitis-vision.html  models_and_methods.html  objects.inv  overview.html  pyenvguide.html  release.html  releasenotesxfopencv.html  requirements.html  results.html  search.html  searchindex.js  using-the-vitis-vision-library.html
2021.2/: benchmark.html  index.html  objects.inv  overview.html  release.html  search.html  searchindex.js
L1/: README.md
L2/: README.md
L3/: README.md
_sources/: index.rst.txt  versions.rst.txt
_static/: documentation_options.js
blas/: Jenkinsfile  LICENSE.txt  README.md  index.html  library.json  (+1 more)
data_compression/L3/demos/libzso/: CMakeLists.txt  Makefile  README.rst  advanced.ini  config.mk  description.json  ent.csh  opts.cfg  opts.ini  postrm  rpmprerm  setup.csh  utils.mk  xrmxclbin.sh
data_compression/L3/demos/libzso/script-1.2.11/: postinst  rpmpostinst
data_compression/L3/demos/libzso/script-1.2.7/: postinst  rpmpostinst
data_compression/L3/demos/libzso/scripts/: setup.csh  setup.sh
data_compression/L3/demos/libzso/src/: host.cpp
(+40531 files in other folders)
